[package]
name = "sand"
version = "0.1.0"
authors = ["John Ledbetter <john.ledbetter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "*"
winit = "*"
rand = "*"
winit_input_helper = "*"
line_drawing = "*"